_deploy/player-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: player
  namespace: baseball
  labels:
    app: player
spec:
  replicas: 1
  selector:
    matchLabels:
      app: player
  template:
    metadata:
      labels:
        app: player
    spec:
      containers:
      - name: player
        image: nschultz/fantasy-baseball-player:0.5.3
        ports:
          - name: web
            containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
