_deploy/player-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: player
  namespace: baseball
spec:
  selector:
    app: player
  ports:
  - port: 8080
    targetPort: 8080
    name: player
